{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 120,
  "lineage": "6aec1c86-3283-43f3-6d85-3177dc15dd98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e74466f04aec3aa4",
            "association_id": "eipassoc-01feff00065fc2141",
            "domain": "vpc",
            "id": "eipalloc-0e74466f04aec3aa4",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0bb683bf0f51a076a",
            "private_dns": "ip-192-169-11-136.ap-northeast-1.compute.internal",
            "private_ip": "192.169.11.136",
            "public_dns": "ec2-54-249-245-124.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.245.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev_eip_nat_gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_eip_nat_gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw-whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:internet-gateway/igw-07d5d231272c45524",
            "id": "igw-07d5d231272c45524",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "Dev",
              "Name": "dev_igw-whiteboard_vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dev_igw-whiteboard_vpc"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_nat-whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e74466f04aec3aa4",
            "association_id": "eipassoc-01feff00065fc2141",
            "connectivity_type": "public",
            "id": "nat-032dd1809607ffdca",
            "network_interface_id": "eni-0bb683bf0f51a076a",
            "private_ip": "192.169.11.136",
            "public_ip": "54.249.245.124",
            "subnet_id": "subnet-0deb03b339d938c3a",
            "tags": {
              "Environment": "dev",
              "Name": "dev_nat-whiteboard_vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_nat-whiteboard_vpc"
            }
          },
          "dependencies": [
            "aws_eip.dev_eip_nat_gateway",
            "aws_subnet.dev_public",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_whiteboard_private_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:route-table/rtb-08e7107372750dde2",
            "id": "rtb-08e7107372750dde2",
            "owner_id": "569083195829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-032dd1809607ffdca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whiteboard_private_table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whiteboard_private_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.dev_nat-whiteboard_vpc",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_whiteboard_public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:route-table/rtb-06be4a4bd719d76a6",
            "id": "rtb-06be4a4bd719d76a6",
            "owner_id": "569083195829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d5d231272c45524",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "whiteboard_public_table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "whiteboard_public_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw-whiteboard_vpc",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af5686140496757b",
            "route_table_id": "rtb-08e7107372750dde2",
            "subnet_id": "subnet-0b49c0d8e4692de15"
          },
          "dependencies": [
            "aws_eip.dev_eip_nat_gateway",
            "aws_nat_gateway.dev_nat-whiteboard_vpc",
            "aws_route_table.dev_whiteboard_private_table",
            "aws_subnet.dev_private",
            "aws_subnet.dev_public",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1617424c96936ef",
            "route_table_id": "rtb-08e7107372750dde2",
            "subnet_id": "subnet-08b43bdd9aa157a37"
          },
          "dependencies": [
            "aws_eip.dev_eip_nat_gateway",
            "aws_nat_gateway.dev_nat-whiteboard_vpc",
            "aws_route_table.dev_whiteboard_private_table",
            "aws_subnet.dev_private",
            "aws_subnet.dev_public",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078d81819af2d7b87",
            "route_table_id": "rtb-08e7107372750dde2",
            "subnet_id": "subnet-0bed53ee3ad1be64e"
          },
          "dependencies": [
            "aws_eip.dev_eip_nat_gateway",
            "aws_nat_gateway.dev_nat-whiteboard_vpc",
            "aws_route_table.dev_whiteboard_private_table",
            "aws_subnet.dev_private",
            "aws_subnet.dev_public",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726cc882ed81a7d4",
            "route_table_id": "rtb-08e7107372750dde2",
            "subnet_id": "subnet-07264e54f07d96536"
          },
          "dependencies": [
            "aws_eip.dev_eip_nat_gateway",
            "aws_nat_gateway.dev_nat-whiteboard_vpc",
            "aws_route_table.dev_whiteboard_private_table",
            "aws_subnet.dev_private",
            "aws_subnet.dev_public",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df6db7d204156297",
            "route_table_id": "rtb-06be4a4bd719d76a6",
            "subnet_id": "subnet-0deb03b339d938c3a"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw-whiteboard_vpc",
            "aws_route_table.dev_whiteboard_public_table",
            "aws_subnet.dev_public",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070c530f5e9cad2d1",
            "route_table_id": "rtb-06be4a4bd719d76a6",
            "subnet_id": "subnet-0131b2be7356360af"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw-whiteboard_vpc",
            "aws_route_table.dev_whiteboard_public_table",
            "aws_subnet.dev_public",
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0697bc43c92e681f6",
            "description": "bastion",
            "egress": [],
            "id": "sg-0697bc43c92e681f6",
            "ingress": [],
            "name": "terraform-20230709080819428900000002",
            "name_prefix": "terraform-",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "dev",
              "Name": "bastion"
            },
            "tags_all": {
              "Envrionment": "dev",
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-03cf6b100207598f3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03cf6b100207598f3",
            "ingress": [],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "dev",
              "Name": "alb"
            },
            "tags_all": {
              "Envrionment": "dev",
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_main_web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0bc88cf876e99a7da",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bc88cf876e99a7da",
            "ingress": [],
            "name": "main_web_server_sg",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "dev",
              "Name": "web"
            },
            "tags_all": {
              "Envrionment": "dev",
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-092d370367bfffbd8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-092d370367bfffbd8",
            "ingress": [],
            "name": "dev_rds_sg",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "dev",
              "Name": "db"
            },
            "tags_all": {
              "Envrionment": "dev",
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0b49c0d8e4692de15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.169.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49c0d8e4692de15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev_WebServer-A",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_WebServer-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-08b43bdd9aa157a37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.169.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b43bdd9aa157a37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev_WebServer-C",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_WebServer-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0bed53ee3ad1be64e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.169.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bed53ee3ad1be64e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev_DBMS-A",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_DBMS-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-07264e54f07d96536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.169.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07264e54f07d96536",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev_DBMS-C",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_DBMS-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0deb03b339d938c3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.169.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deb03b339d938c3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev_ALB\u0026NAT",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_ALB\u0026NAT",
              "Tier": "public"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0131b2be7356360af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.169.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0131b2be7356360af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev_ALB",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_ALB",
              "Tier": "public"
            },
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-083e74f4f28c5645d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.169.0.0/16",
            "default_network_acl_id": "acl-02d127c322553cbc5",
            "default_route_table_id": "rtb-061aefa4e95bb3234",
            "default_security_group_id": "sg-0a80076df20d67053",
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083e74f4f28c5645d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061aefa4e95bb3234",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "Dev",
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "dev_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dev_s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc-endpoint/vpce-00774388cdbc88b87",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-00774388cdbc88b87",
            "owner_id": "569083195829",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-083e74f4f28c5645d"
          },
          "dependencies": [
            "aws_vpc.dev_whiteboard_vpc"
          ]
        }
      ]
    }
  ]
}